changing footer content

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
       <figure class="about">
          <img src="images/avatar.png">
          <p>Sinan Baymammadli</p>
-         <a href=""><i class="fa fa-facebook-official"></i></a>
+         <a href=""><i class="fa fa-facebook-square"></i></a>
          <a href=""><i class="fa fa-twitter-square"></i></a>
          <a href=""><i class="fa fa-youtube-square"></i></a>
       </figure>
