--- a/src/html/basic/foot.html
+++ b/src/html/basic/foot.html
@@ -1,4 +1,4 @@
-	<footer>All Rights Reserved</footer>
+	<footer>2016</footer>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
