--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,9 +4,9 @@
 
 <main>
    <section class="welcome">
-      <h1>Web Dev<br>Starter Kit</h1>
+      <h1>Gulp<br>Starter Kit</h1>
 
-      <a href="#" class="downloadbtn">Download</a>
+      <a href="https://github.com/SinanBaymammadli/Gulp-Starter-Kit" class="downloadbtn">Download</a>
    </section>
 
    <section class="welcome">
