--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
    <section class="welcome">
       <h1>Gulp<br>Starter Kit</h1>
 
-      <a href="https://github.com/SinanBaymammadli/Gulp-Starter-Kit" class="downloadbtn">Download</a>
+      <a href="https://github.com/SinanBaymammadli/Gulp-Starter-Kit" class="downloadbtn" target="_blank">Download</a>
    </section>
 
    <section class="welcome">
@@ -15,9 +15,9 @@
       <figure class="about">
          <img src="images/avatar.png">
          <p>Sinan Baymammadli</p>
-         <a href=""><i class="fa fa-facebook-square"></i></a>
-         <a href=""><i class="fa fa-twitter-square"></i></a>
-         <a href=""><i class="fa fa-youtube-square"></i></a>
+         <a href="https://www.facebook.com/profile.php?id=100003869927373" target="_blank"><i class="fa fa-facebook-square"></i></a>
+         <a href="https://twitter.com/s_baymammadli" target="_blank"><i class="fa fa-twitter-square"></i></a>
+         <a href="https://github.com/SinanBaymammadli" target="_blank"><i class="fa fa-github-square"></i></a>
       </figure>
    </section>
 </main>
